@@ -1,5 +1,7 @@
 Smb4K 1.0.7 (2013-03-??):
-- Fixed remounting of shares. 
+- Fixed remounting of shares.
+- Fixed Smb4KCustomOptionsManager::hasCustomOptions(). The default options
+  defined via the configuration dialog are honored now.
 
 Smb4K 1.0.6 (2013-03-03):
 - Fixed crash in Smb4KMounter::slotAuthError() due to signals being emitted
